--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon --inspect=0.0.0.0:9229 app.js",
-    "test": "vitest run"
+    "dev:test": "cross-env PORT_OVERRIDE=9595 node app.js",
+    "test": "concurrently --kill-others \"npm run dev:test\" \"wait-on tcp:9595 && vitest\""
   },
   "repository": {
     "type": "git",
@@ -37,10 +38,13 @@
     "pino-http": "^9.0.0",
     "pino-pretty": "^10.3.1",
     "swagger-ui-express": "^5.0.0",
-    "vitest": "^0.34.6"
+    "vitest": "^0.34.6",
+    "wait-on": "^7.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.18",
+    "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
     "nodemon": "^3.0.1"
   },
   "imports": {
