build: test run on steps

--- a/.github/workflows/build-branch.yaml
+++ b/.github/workflows/build-branch.yaml
@@ -16,7 +16,9 @@ jobs:
         with:
           node-version: 18
       - run: find . -name 'package-lock.json' -execdir npm ci \;
-      - run: npm test
+      - run: npm run dev:test
+      - run: npx wait-on tcp:9595
+      - run: npm run test
   build-latest:
     name: Build branch
     runs-on: ubuntu-latest
