--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node app.js",
     "dev": "nodemon --inspect=0.0.0.0:9229 app.js",
     "dev:test": "cross-env PORT_OVERRIDE=9595 node app.js",
-    "test": "concurrently \"npm run dev:test\" \"wait-on tcp:9595 && vitest\""
+    "test": "vitest"
   },
   "repository": {
     "type": "git",
