--- a/.github/workflows/build-branch.yaml
+++ b/.github/workflows/build-branch.yaml
@@ -15,10 +15,14 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
-      - run: find . -name 'package-lock.json' -execdir npm ci \;
-      - run: npm run dev:test &
-      - run: npx wait-on tcp:9595
-      - run: npm run test
+      - name: Install dependencies
+        run: find . -name 'package-lock.json' -execdir npm ci \;
+      - name: Run server
+        run: npm start &
+      - name: Wait for server to start
+        run: npx wait-on tcp:8585
+      - name: Run tests
+        run: npm run test
   build-latest:
     name: Build branch
     runs-on: ubuntu-latest
