--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,8 +15,14 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
-      - run: npm ci
-      - run: npm test
+      - name: Install dependencies
+        run: find . -name 'package-lock.json' -execdir npm ci \;
+      - name: Run server
+        run: npm start &
+      - name: Wait for server to start
+        run: npx wait-on tcp:8585
+      - name: Run tests
+        run: npm run test
   build:
     name: Build with google cloud
     runs-on: ubuntu-latest
