--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon --inspect=0.0.0.0:9229 app.js",
-    "test": "vitest run"
+    "test": "vitest run",
+    "prepare": "husky"
   },
   "repository": {
     "type": "git",
@@ -40,7 +41,11 @@
     "vitest": "^0.34.6"
   },
   "devDependencies": {
+		"@onify/commitlint-config": "git+https://github.com/onify/commitlint-config.git",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@types/express": "^4.17.18",
+    "husky": "^9.0.11",
     "nodemon": "^3.0.1"
   },
   "imports": {
