--- a/package.json
+++ b/package.json
@@ -32,18 +32,20 @@
     "express": "^4.18.2",
     "joi": "^17.11.0",
     "joi-to-swagger": "^6.2.0",
+    "lint-staged": "^15.2.2",
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "pino": "^8.17.2",
     "pino-http": "^9.0.0",
     "pino-pretty": "^10.3.1",
+    "prettier": "^3.2.5",
     "swagger-ui-express": "^5.0.0",
     "vitest": "^0.34.6"
   },
   "devDependencies": {
-		"@onify/commitlint-config": "git+https://github.com/onify/commitlint-config.git",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
+    "@onify/commitlint-config": "git+https://github.com/onify/commitlint-config.git",
     "@types/express": "^4.17.18",
     "husky": "^9.0.11",
     "nodemon": "^3.0.1"
