--- a/.github/workflows/build-branch.yaml
+++ b/.github/workflows/build-branch.yaml
@@ -10,11 +10,11 @@ jobs:
     name: Run tests
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js 18
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - name: Use Node.js 20
+        uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20
       - name: Install dependencies
         run: find . -name 'package-lock.json' -execdir npm ci \;
       - name: Run server
@@ -31,18 +31,14 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - run: |
-          sudo apt-get install python2.7
-          export CLOUDSDK_PYTHON="/usr/bin/python2"
-
-      - uses: google-github-actions/setup-gcloud@v0
+      - id: auth
+        uses: google-github-actions/auth@v2
         with:
-          version: "286.0.0"
-          project_id: ${{ secrets.GCP_BUILD_PROJECT_ID }}
-          service_account_email: ${{ secrets.GCP_BUILD_SERVICE_ACCOUNT_EMAIL }}
-          service_account_key: ${{ secrets.GCP_BUILD_SERVICE_ACCOUNT_KEY }}
+          credentials_json: ${{ secrets.GCP_BUILD_SERVICE_ACCOUNT_KEY }}
+
+      - uses: google-github-actions/setup-gcloud@v2
 
       - name: Extract branch name
         shell: bash
