--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,11 +10,11 @@ jobs:
     name: Run tests
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js 18
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - name: Use Node.js 20
+        uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20
       - name: Install dependencies
         run: find . -name 'package-lock.json' -execdir npm ci \;
       - name: Run server
@@ -39,24 +39,20 @@ jobs:
           MINOR_V_TAG=$(echo $FULL_V_TAG | sed -r -e 's/.*-(\w+)/\1/' -e 's/(^[0-9]+\.[0-9]+).*/\1/')
           MAJOR_V_TAG=$(echo $MINOR_V_TAG | sed -r -e 's/(^[a-z]+).*/\1/' -e 's/(^[0-9]+).*/\1/')
 
-          echo ::set-output name=full_version_tag::$FULL_V_TAG
-          echo ::set-output name=minor_version_tag::$MINOR_V_TAG
-          echo ::set-output name=major_version_tag::$MAJOR_V_TAG
+          echo "full_version_tag=$FULL_V_TAG" >> $GITHUB_OUTPUT
+          echo "minor_version_tag=$MINOR_V_TAG" >> $GITHUB_OUTPUT
+          echo "major_version_tag=$MAJOR_V_TAG" >> $GITHUB_OUTPUT
 
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - run: |
-          sudo apt-get install python2.7
-          export CLOUDSDK_PYTHON="/usr/bin/python2"
+      - id: auth
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_BUILD_SERVICE_ACCOUNT_KEY }}
 
       # Setup gcloud CLI
-      - uses: google-github-actions/setup-gcloud@v0
-        with:
-          version: "286.0.0"
-          project_id: ${{ secrets.GCP_BUILD_PROJECT_ID }}
-          service_account_email: ${{ secrets.GCP_BUILD_SERVICE_ACCOUNT_EMAIL }}
-          service_account_key: ${{ secrets.GCP_BUILD_SERVICE_ACCOUNT_KEY }}
+      - uses: google-github-actions/setup-gcloud@v2
 
       # Build and push image to Google Container Registry
       - name: Build
